fix border clipping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -306,7 +306,7 @@ footer a::before {
 }
 
 .gridview img{
-    width: 100%;
+    width: 99%;
     height: 100%;
     border: solid;
     border-radius: 5%;
